fix:gap between icons in users table

--- a/src/app/pages/admin/users/users.scss
+++ b/src/app/pages/admin/users/users.scss
@@ -1,4 +1,4 @@
-:host ::ng-deep .p-button {
+.btn-add {
   margin: 0 25px;
 }
 .e-text,
